[package]
name = "blinkled"
version = "0.1.0"
authors = ["A Björck <bjorck@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2"
nb = "0.1.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-rtt-core = "0.2.1"
#panic-halt = "0.2"
bare-metal = "1.0.0"
smart-leds = "0.3.0"
[dependencies.ws2812-spi]
git = "https://github.com/abjorck/ws2812-spi-rs"
version = "0.3.0"
features = ["mosi_idle_high"]

[dependencies.ws2812-timer-delay]
version = "0.3.0"
#features = ["slow"]

[dependencies.rtt-target]
version = "0.2.2"
features = ["cortex-m"]

[dependencies.stm32f4xx-hal]
default-features = false
version = "0.8.3"
features = ["rt", "stm32f401"]

[profile.dev]
debug = 1 # this is the default in dev mode

[profile.release]
opt-level = 3
#debug = 1 # enable debug info also in release mode
